# sentinela-aion

./: .env.example  .env.poc-decision.example  .env.poc-transparent.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.decision.yml  docker-compose.demo-investor.yml  docker-compose.lite.yml  docker-compose.multi.yml  docker-compose.perf.yml  docker-compose.poc-decision.yml  docker-compose.poc-transparent.yml  docker-compose.poc.yml  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.sim.yml  docker-compose.yml  pyproject.toml  start.py  stop.py
.claude/: launch.json
.runtime/: overrides.json
aion/: __init__.py  cli.py  config.py  license.py  main.py  middleware.py  observability.py  pipeline.py  proxy.py  supabase_writer.py
aion-console/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  render.yaml
benchmarks/: README.md  __init__.py  bench_suite.py  chaos_test.py  decisions_bench.py  pipeline_latency.py  stress_test.py
config/: complexity_archetypes.yaml  models.sim.yaml  models.yaml  pii_exclusions.yaml  policies.yaml  rewrite_rules.yaml  services.yaml
console/: index.html
docker/: .wslconfig.recommended  Dockerfile.aion  Dockerfile.aion-decision-only  Dockerfile.mock_llm  alerts.yml  nginx-2replicas.conf  nginx-mock.conf  nginx-with-cache.conf  nginx.conf  prometheus.yml  proxy_decision_only_stub.py
docs/: ARCHITECTURE.md  PRODUCTION_CHECKLIST.md  README-POC.md  RUNBOOK.md  SECURITY_REPORT.md  guia-implantacao.md  integration-guide.md  pilot-onboarding.md  poc-integration-guide.md  (+2 more)
(+362 files in other folders)
