[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aion"
version = "0.1.0"
description = "AION — Motor Realtime do Sentinela. Controla a IA em tempo real."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx",  # for TestClient
    "ruff>=0.7.0",
]

[project.scripts]
aion = "aion.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
